k8s-resources/web-challenges/svc-blueboy.yaml
apiVersion: v1
kind: Service
metadata:
  name: blueboy
spec:
  selector:
    app: blueboy
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
