k8s-resources/web-challenges/ingress-web-challenges.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-challenges
  namespace: web-challenges
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: web-challenges-frontend-config
    networking.gke.io/managed-certificates: web-challenges-tls-cert
    kubernetes.io/ingress.class: "gce"
  labels:
    name: invisible-captcha
spec:
  rules:
    - host: blue.web.broncoctf.xyz
      http:
        paths:
          - backend:
              service:
                name: blueboy
                port:
                  name: http
            pathType: Prefix
            path: /
